<resources>
    <string name="app_name">MixIt</string>
    <string name="main_menu_button_endless">Free Play</string>
    <string name="main_menu_button_arcade">Arcade</string>
    <string name="main_menu_button_achievemnets">Achievements</string>
    <string name="main_menu_button_settings">Settings</string>
    <string name="arcade_fragment_goal">Goal:\n%s</string>
    <string name="arcade_fragment_time">Time: %02d:%02d:%02d</string>
    <string name="arcade_fragment_turns">Turns: %d</string>
    <string name="game_element_list_search_hint">Search elements…</string>
    <string name="game_element_list_content_description">Searchable element list</string>
    <string name="game_playground_fab_clear">clear playground</string>
    <string name="game_playground_fab_add_element">open element list</string>
    <string name="gamestate_shared_preferences_endless">de.thm.mixit.GAMESTATE_ENDLESS_FILE</string>
    <string name="gamestate_shared_preferences_arcade">de.thm.mixit.GAMESTATE_ARCADE_FILE</string>
    <string name="statistic_shared_preferences">de.thm.mixit.STATISTIC_FILE</string>
    <string name="achievements_shared_preferences">de.thm.mixit.ACHIEVEMENTS_FILE</string>
    <string name="achievements_heading">Achievements</string>
    <string name="achievements_sub_heading_progress">%d/%d Achievements unlocked</string>
    <string name="achievement_card_progress_text">%d/%d</string>
    <string name="achievement_name_hooked">Hooked</string>
    <string name="achievement_desc_hooked">Play 1 hour</string>
    <string name="achievement_name_addicted">Addicted</string>
    <string name="achievement_desc_addicted">Play 3 hours </string>
    <string name="achievement_name_get_a_life">Get a life</string>
    <string name="achievement_desc_get_a_life">Play 5 hours</string>
    <string name="achievement_name_know_the_drill">Know the drill</string>
    <string name="achievement_desc_know_the_drill">Combine 200 elements</string>
    <string name="achievement_name_the_journey_begins">The journey begins</string>
    <string name="achievement_desc_the_journey_begins">Discover 10 new elements</string>
    <string name="achievement_name_word_collector">Word Collector</string>
    <string name="achievement_desc_word_collector">Discover 100 new elements</string>
    <string name="achievement_name_I_like_it_clean">I like it clean</string>
    <string name="achievement_desc_I_like_it_clean">Delete 50 elements from the playground</string>
    <string name="achievement_name_challenge_accepted">Challenge accepted!</string>
    <string name="achievement_desc_challenge_accepted">Win 10 arcade games</string>
    <string name="achievement_name_again_really">Again… really?</string>
    <string name="achievement_desc_again_really">Discover 5 combinations for one element</string>
    <string name="achievement_name_winner">Winner</string>
    <string name="achievement_desc_winner">Win your first arcade game</string>
    <string name="achievement_name_fast_as_fuck_boy">Fast as fuck boy</string>
    <string name="achievement_desc_fast_as_fuck_boy">Win an arcade game in under 1 minute</string>
    <string name="achievement_name_mastermind">Mastermind</string>
    <string name="achievement_desc_mastermind">Win an arcade game in under 10 turns</string>
    <string name="achievement_name_kaercher">Kärcher</string>
    <string name="achievement_desc_kaercher">Delete 10 elementchips at once</string>
    <string name="achievement_name_how_did_we_get_here">How did we get here?</string>
    <string name="achievement_desc_how_did_we_get_here">Discover a word containing at least 20 characters</string>
    <string name="achievement_name_the_cake_is_a_lie">The cake is a lie</string>
    <string name="achievement_desc_the_cake_is_a_lie">Discover chocolate cake</string>
    <string name="arcade_victory_win1">Super, Du hast</string>
    <string name="arcade_victory_win2">gefunden!</string>
    <string name="arcade_victory_new_game_text">Neues Spiel</string>
    <string name="arcade_victory_return_text">Zurück zum&#10;Hauptmenü</string>
    <string name="arcade_victory_win1">Congrats, you just found</string>
    <string name="arcade_victory_win2">!</string>
    <string name="arcade_victory_new_game_text">New Game</string>
    <string name="arcade_victory_return_text">Back to&#10;main menu</string>
    <string name="settings_title">Settings</string>
    <string name="settings_label_language">Language</string>
    <string name="settings_label_theme">Theme</string>
    <string name="settings_label_danger_zone">Danger Zone</string>
    <string name="settings_button_reset_progress">Reset Progress</string>
    <string-array name="language_array">
        <item>System</item>
        <item>English</item>
        <item>Deutsch</item>
    </string-array>
    <string-array name="language_values">
        <item>system</item>
        <item>en</item>
        <item>de</item>
    </string-array>
    <string-array name="theme_array">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="dialog_reset_progress_description">
        This option resets your current progress in free play.
        You will start again with the 4 basic terms. Achievements will be reset as well.
        This cannot be undone. Type \"MixIt\" to confirm!
    </string>
    <string name="dialog_reset_progress_title">ATTENTION</string>
    <string name="dialog_reset_progress_button">Reset Progress</string>
    <string name="mix_it">MixIt</string>
    <string name="reset_success">Reset successfully!</string>
</resources>