<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_reset_progress_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_reset_progress_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_reset_progress_dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/dialog_reset_progress_close_button"
        app:layout_constraintEnd_toEndOf="@+id/textView_reset_progress_dialog_description"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_reset_progress_dialog_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/dialog_reset_progress_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_reset_progress_dialog_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_reset_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:ems="10"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_reset_progress_dialog_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_reset_progress_dialog_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mix_it"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset_progress_dialog_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_reset_progress_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_reset_progress" />
</androidx.constraintlayout.widget.ConstraintLayout>