<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfetti_arc_vic"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/button_arc_vic_return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onReturnButtonClicked"
        android:text="@string/arcade_victory_return_text"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_arc_vic_new_game"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/button_arc_vic_new_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="onNewGameButtonClicked"
        android:text="@string/arcade_victory_new_game_text"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_arc_vic_turns"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/text_arc_vic_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="time"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:drawableRightCompat="@drawable/baseline_hourglass_empty_24"
        app:layout_constraintBottom_toTopOf="@+id/text_arc_vic_turns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_arc_vic_turns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="turns"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:drawableRightCompat="@drawable/outline_barefoot_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_arc_vic_static1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/arcade_victory_win1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/text_arc_vic_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_arc_vic_goal_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="goal word"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_arc_vic_static1" />

    <TextView
        android:id="@+id/text_arc_vic_static2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/arcade_victory_win2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_arc_vic_goal_word" />
</androidx.constraintlayout.widget.ConstraintLayout>